# robocode

./: .gitignore  Cargo.nix  Cargo.toml  Justfile  README.md  deploy-rp4.sh  deploy-rp5.sh  flake.nix  rpi-runner.sh  rpi-runner_bluerov.sh  setup_camera.sh  shell.nix  source_env  v4l2.txt
.cargo/: config.toml
common/: Cargo.toml  build.rs
common/src/: bundles.rs  components.rs  ctrlc.rs  ecs_sync.rs  events.rs  git.rs  lib.rs  protocol.rs  reflect.rs  signal_handler.rs  sync.rs  types.rs
common/src/adapters/: dynamic.rs
common/src/components/: control.rs  core.rs  motor.rs  pid.rs  power.rs  sensor.rs  system_monitor.rs  thruster.rs
common/src/ecs_sync/: apply_changes.rs  detect_changes.rs
common/src/types/: units.rs  utils.rs
motor_math/: Cargo.toml
motor_math/src/: blue_rov.rs  blue_rov_heavy.rs  glam.rs  lib.rs  motor_preformance.rs  solve.rs  x3d.rs
motor_math/src/solve/: reverse.rs
networking/: Cargo.toml
robot/: Cargo.toml  build.rs  robot.toml  robot_bluerov.toml  robot_mate.toml  robot_mate_2024.toml  robot_mate_2025.toml
robot/src/: config.rs  main.rs
robot/src/peripheral/: icm20602.rs  mmc5983.rs  ms5937.rs
robot/src/plugins/: actuators.rs  core.rs  monitor.rs  sensors.rs
robot/src/plugins/actuators/: depth_hold.rs  hardware.rs  leds.rs  servo.rs  stabilize.rs  thruster.rs
robot/src/plugins/actuators/hardware/: dc_motor.rs  motor_id_map.rs  pwm.rs
robot/src/plugins/core/: robot.rs  state.rs  stats.rs
robot/src/plugins/core/stats/: definitions.rs  handler.rs
robot/src/plugins/monitor/: hw_stat.rs  voltage.rs
robot/src/plugins/sensors/: cameras.rs  depth.rs  leak.rs  orientation.rs
robot/src/utils/: average.rs
robot_new/: Cargo.toml
robot_new/src/config/: thruster.rs
scripts/: rpi-runner.sh  rpi-runner_mate.sh  run.sh
stable_hashmap/: Cargo.toml
stable_hashmap/src/: lib.rs
surface/: Cargo.toml
surface/src/: attitude.rs  input.rs  layer_allocator.rs  main.rs  photosphere.rs  shipreck.rs  shipwreck.rs  ui.rs  video_display_2d_master.rs  video_display_2d_tile.rs  video_display_3d.rs  video_pipelines.rs  video_stream.rs
surface/src/video_pipelines/: copy_to_ecs.rs  edges.rs  marker.rs  measure.rs  photosphere.rs  save.rs  scale.rs  squares.rs  undistort.rs
waterlinked/: Cargo.toml
waterlinked/src/: main.rs  trajectory.rs  ui.rs  waterlinked.rs  waterlinked_api.rs
