[workspace]
resolver = "2"
members = [
    "robot",
    "surface",
    "common",
    "networking",
    "motor_math",
    "stable_hashmap",
    "waterlinked",
]

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
assign_op_pattern = "allow"

[workspace.dependencies]

# Our crates
common = { path = "common" }
networking = { path = "networking" }
motor_math = { path = "motor_math" }
stable_hashmap = { path = "stable_hashmap" }
dc_motor_interface = { package = "interface", git = "https://github.com/Eoghanmc22/dc-motor.git", rev = "611f3d5c95b1605203043361cddf287f87b0bc48" }

# Bevy
bevy = { version = "0.15", default-features = false, features = ["serialize"] }
bevy_reflect = "0.15"

# Bevy plugins
leafwing-input-manager = { version = "0.16", features = ["egui", "ui"] }
bevy_panorbit_camera = "0.25"
bevy-tokio-tasks = "0.15"

# Egui
egui = "0.31"
egui_extras = "0.31"
egui_plot = "0.32"
bevy_egui = { version = "0.33", default-features = false }
bevy-inspector-egui = "0.30"

# Math
nalgebra = { version = "0.33", features = [
    "convert-glam029",
    "serde-serialize",
] }
glam = { version = "0.29", features = ["serde"] }
ahrs = "0.7"
num = "0.4"
num-dual = { git = "https://github.com/Eoghanmc22/num-dual.git", rev = "62e12f43f24de5eb8c7e22f208436e3be8dc1ea4" }
num_enum = "0.7"


# Errors and Logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

# Data Serialization
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.8"
csv = "1"
bincode = "1"

#  Networking
mio = { version = "1.0", features = ["os-poll", "net"] }
mdns-sd = "0.13"
flume = "0.11"
hostname = "0.4"
reqwest = { version = "0.12", features = ["json"] }

# Miscellaneous
sysinfo = { version = "0.29", default-features = false }
rppal = { version = "0.22", features = ["hal"] }
signal-hook = "0.3"
rand = "0.9"
rgb = "0.8"
ahash = "0.8"
time = { version = "0.3", features = ["local-offset", "formatting"] }
# TODO: Why do we need this feature?
opencv = { version = "0.94", features = ["clang-runtime"]}
itertools = "0.14"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
vergen-gix = "1"


# Enable code optimization in debug
[profile.dev]
opt-level = 3

[profile.release]
debug = true
