[package]
name = "common"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
motor_math = { workspace = true, features = ["glam"] }
networking = { workspace = true }
stable_hashmap = { workspace = true }

bevy = { workspace = true }
glam = { workspace = true }

serde = { workspace = true }
bincode = { workspace = true }
crossbeam = { workspace = true }

mdns-sd = { workspace = true }
hostname = { workspace = true }
flume = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

rand = { workspace = true }
ahash = { workspace = true }

signal-hook = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen-gix = { workspace = true }

[features]
tracy_frame_mark = []
