[package]
name = "motor_math"
version = "0.1.0"
edition = "2021"

# TODO: Are all of these needed?
[dependencies]
stable_hashmap = { path = "../stable_hashmap" }

csv = "1"
serde = { version = "1", features = ["derive"] }
# ahash = { version = "0.8" }

num = "0.4"
num-dual = { git = "https://github.com/Eoghanmc22/num-dual.git", rev = "08b163b101cde7e3fa113a6bb93a6423eaf0b875" }
# num-dual = { path = "../../num-dual" }
# num-dual = "0.11"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
glam = { version = "0.27", features = ["serde"], optional = true }

num_enum = "0.7"

anyhow = "1"
tracing = "0.1"

bevy_reflect = "0.14"

[features]
glam = ["dep:glam"]
double_precision = []
