[package]
name = "motor_math"
version = "0.1.0"
edition = "2021"

# TODO: Are all of these needed?
[dependencies]
stable_hashmap = { path = "../stable_hashmap" }

csv = "1"
serde = { version = "1", features = ["derive"] }
# ahash = { version = "0.8" }

num = "0.4"
num-dual = { git = "https://github.com/Eoghanmc22/num-dual.git", rev = "62e12f43f24de5eb8c7e22f208436e3be8dc1ea4" }
# num-dual = { path = "../../num-dual" }
# num-dual = "0.11"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
glam = { version = "0.27", features = ["serde"], optional = true }
itertools = "0.14"

num_enum = "0.7"

anyhow = "1"
tracing = "0.1"

bevy_reflect = "0.14"

[features]
glam = ["dep:glam"]
double_precision = []
no_motor_control_data = []
