[package]
name = "motor_math"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
stable_hashmap = { workspace = true }

bevy_reflect = { workspace = true }

serde = { workspace = true }
csv = { workspace = true }

nalgebra = { workspace = true }
glam = { workspace = true, optional = true }
num = { workspace = true }
num-dual = { workspace = true }
num_enum = { workspace = true }

itertools = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }

[features]
glam = ["dep:glam"]
double_precision = []
no_motor_control_data = []
