[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

crossbeam = { workspace = true }
ahash = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
bincode = { workspace = true }
