[package]
name = "robot_new"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
networking = { workspace = true }
motor_math = { workspace = true }
stable_hashmap = { workspace = true }

bevy = { workspace = true }
nalgebra = { workspace = true }
glam = { workspace = true }
ahrs = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

rppal = { workspace = true }
sysinfo = { workspace = true }
rgb = { workspace = true }


serde = { workspace = true }
toml = { workspace = true }

crossbeam = { workspace = true }
ahash = { workspace = true }

[features]
tracy = ["bevy/trace_tracy", "common/tracy_frame_mark"]
