[package]
name = "surface"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
networking = { workspace = true }
motor_math = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
  "wayland",
  "dynamic_linking",
] }

egui = { workspace = true }
egui_extras = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy_panorbit_camera = { workspace = true }
bevy_mod_picking = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }

crossbeam = { workspace = true }
ahash = { workspace = true }
time = { workspace = true }
opencv = { workspace = true }

# *brings in all of tokio for a single function*
tokio = { workspace = true }
bevy-tokio-tasks = { workspace = true }

[features]
tracy = ["bevy/trace_tracy"]
