[package]
name = "waterlinked"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
networking = { path = "../networking" }
motor_math = { path = "../motor_math" }

bevy = { version = "0.14", features = ["wayland", "dynamic_linking"] }

tracing = "0.1"
tracing-subscriber = "0.3"

anyhow = "1"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = "1"
bevy-tokio-tasks = { git = "https://github.com/foxzool/bevy-tokio-tasks.git" }

egui = "0.28"
egui_extras = "0.28"
bevy_egui = { version = "0.28", default-features = false }
bevy-inspector-egui = "0.25"
