[package]
name = "waterlinked"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
common = { workspace = true }
networking = { workspace = true }
motor_math = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
  "wayland",
  "dynamic_linking",
] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }

reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
bevy-tokio-tasks = { workspace = true }

egui = { workspace = true }
egui_plot = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
